updated and unified python requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,23 @@
-kitchen
-phpserialize
-unicodecsv
-pympler
+bleach
 dill
-paramiko
-sshtunnel
-wordpress_json
-pymysql
-simplejson
+exitstatus
 google-api-python-client
+httplib2
+kitchen
+paramiko
+pgi
+phpserialize
+piexif
+pillow
+pympler
+pymysql
+python-wordpress-xmlrpc
+pyyaml
+simplejson
+sshtunnel
+tabulate
+unicodecsv
+uniqid
+urllib3  
+woocommerce
+wordpress_json
