started fixing imports, fixed wp_changes

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,9 @@ bad_variable_names.txt
 bad_imports.txt
 
 bad_variable_names.txt
+
+bad_variable_names.txt
+
+__init__.py
+
+bad_variable_names.txt
