fix all camelCase names, aggressive autopep8, fix some bad imports

--- a/woogenerator/generator_config_example.yaml
+++ b/woogenerator/generator_config_example.yaml
@@ -1,6 +1,6 @@
 #Generator file info
-taxoDepth: <taxo depth here>
-itemDepth: <item depth here>
+taxo_depth: <taxo depth here>
+item_depth: <item depth here>
 
 myo_schemas:
     - <myo schemas here>
