fix override settings rep_path

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 bleach
+configargparse
 dill
 exitstatus
 google-api-python-client
 httplib2
-npyscreen
 kitchen
+npyscreen
 paramiko
 pgi
 phpserialize
