--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,19 @@
-bleach
-configargparse
-dill
-exitstatus
-google-api-python-client
-httplib2
-kitchen
-npyscreen
-paramiko
-pgi
-phpserialize
-piexif
-pillow
-pympler
-pymysql
-python-wordpress-xmlrpc
-pyyaml
-simplejson
-sshtunnel
-tabulate
-unicodecsv
-uniqid
-urllib3
-woocommerce
-wordpress_json
+bleach==1.5.0
+ConfigArgParse==0.11.0
+exitstatus==1.2.0
+httplib2==0.10.3
+kitchen==1.2.4
+npyscreen==4.10.5
+paramiko==2.1.1
+phpserialize==1.3
+piexif==1.0.12
+PyMySQL==0.7.10
+requests==2.13.0
+simplejson==3.10.0
+sshtunnel==0.1.2
+tabulate==0.7.7
+unicodecsv==0.14.1
+Pillow==4.0.0
+google_api_python_client==1.6.2
+wordpress==0.0.1
+PyYAML==3.12
