added Role Sync, increase test coverage

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,5 @@ bad_imports.txt
 *.csv
 tests/sample_data/EAP-PECPRE.jpg
 tests/sample_data/STFTO-CAL.png
+tests/sample_data/EAP-PECPRE.jpg
+tests/sample_data/STFTO-CAL.png
