--- a/tests/sample_data/merger_config_test.yaml
+++ b/tests/sample_data/merger_config_test.yaml
@@ -7,3 +7,37 @@ last-sync: !!str 2015-05-29 04:33:40
 
 show-report: true
 skip-download-master: true
+
+wp-api-key: v4dw5kZxoSzD
+wp-api-secret: ojVHZREfWqeOm3z9TpabJdxFCLaTizyCZpXhl3Ec2loSC3gp
+wp-user: wptest
+wp-pass: gZ*gZk#v0t5$j#NQ@9
+wp-callback: http://127.0.0.1:18080/wptest
+wp-api-version: wp/v2
+
+wc-api-key: ck_b13285e31ed659227f2fdc1db856d1d3d0b06c21
+wc-api-secret: cs_3038b86805335faa887c6605364bcd1df9e57254
+store-url: http://localhost:18080/wptest/
+
+ssh-user: wptest
+ssh-pass: pek-pealg-ai
+ssh-host: localhost
+remote-bind-port: 3306
+db-user: wptest
+db-pass: dryad-agent-flinch
+db-name: wptest
+db-charset: utf8mb4
+# wp-srv-offset: -7200
+tbl-prefix: wp_
+
+m-ssh-user: act_test
+m-ssh-pass: act_test_pass
+m-ssh-host: localhost
+m-ssh-port: 22
+remote-export-folder: /remote-export-folder/
+m-x-cmd: export-command.exe
+m-i-cmd: import-command.exe
+m-db-user: act-db-user
+m-db-pass: act-db-pass
+m-db-name: act-db-name
+m-db-host: .
