ignore sample data images

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,5 @@ tests/sample_data/STFTO-CAL.png
 tests/sample_data/EAP-PECPRE.jpg
 tests/sample_data/STFTO-CAL.png
 *.jpg
+tests/sample_data/STFTO-CAL.png
+tests/sample_data/EAP-PECPRE.jpg
