--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,11 @@
 test=pytest
 [tool:pytest]
 ; addopts = --verbose
+addopts = --pylama
 python_files = tests/*.py
+[pylama]
+skip=pocs/*
+[pylama:tests/*]
+disable=D
+[pylama:radon]
+complexity=20
