further configure setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 test=pytest
 [tool:pytest]
 ; addopts = --verbose
-addopts = --pylama
+; addopts = --pylama
 python_files = tests/*.py
 [pylama]
 skip=pocs/*
@@ -10,3 +10,7 @@ skip=pocs/*
 disable=D
 [pylama:radon]
 complexity=20
+[pylama:mccabe]
+complexity=20
+[pylama:pycodestyle]
+max_line_length=100
