ignore unused import in __init__.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,9 +5,11 @@ test=pytest
 ; addopts = --pylama
 python_files = tests/*.py
 [pylama]
-skip=pocs/*
+skip=pocs/*,\.*
 [pylama:tests/*]
 disable=D
+[pylama:*/__init__.py]
+ignore=W0611
 [pylama:radon]
 complexity=20
 [pylama:mccabe]
