--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,24 @@
 bleach==1.5.0
+bs4
 ConfigArgParse==0.11.0
+dill
+exchangelib
 exitstatus==1.2.0
+google_api_python_client==1.6.2
 httplib2==0.10.3
 kitchen==1.2.4
+lxml
 npyscreen==4.10.5
 paramiko==2.1.1
 phpserialize==1.3
 piexif==1.0.12
+Pillow==4.0.0
 PyMySQL==0.7.10
+pyxero
+PyYAML==3.12
 requests==2.13.0
 simplejson==3.10.0
 sshtunnel==0.1.2
 tabulate==0.7.7
 unicodecsv==0.14.1
-Pillow==4.0.0
-google_api_python_client==1.6.2
-PyYAML==3.12
 wordpress-api
-pyxero
-bs4
-dill
-lxml
