--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ test=pytest
 [tool:pytest]
 ; addopts = --verbose
 ; addopts = --pylama
+; addopts = -n4
 python_files = tests/*.py
 [pylama]
 skip=pocs/*,\.*
