skip more paths searching for tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ addopts = --verbose
 ; addopts = -n4
 python_files = tests/*.py
 [pylama]
-skip=pocs/*,\.*
+skip=\.*,build/*,dist/*,*.egg-info,pocs/*
 [pylama:tests/*]
 disable=D
 [pylama:*/__init__.py]
