--- a/tests/sample_data/generator_config_test.yaml
+++ b/tests/sample_data/generator_config_test.yaml
@@ -40,7 +40,7 @@ tbl-prefix: wp_
 wc-api-key: ck_e1dd4a9c85f49b9685f7964a154eecb29af39d5a
 wc-api-secret: cs_8ef3e5d21f8a0c28cd7bc4643e92111a0326b6b1
 wc-callback: http://127.0.0.1/oauth1_callback
-store-url: http://localhost:18080/wptest/
+store-url: http://derwent-mac.ddns.me:18080/wptest/
 wc-creds-store: ~/.credentials/wc-api-creds-test-local.json
 # To use legacy API
 # wc-api-namespace: wc-api
