--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 [aliases]
 test=pytest
 [tool:pytest]
-addopts = --verbose
+addopts = --run-slow
+; addopts = --verbose
 ; addopts = --pylama
 ; addopts = -n4
 python_files = tests/*.py
