--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,30 @@
-bleach==1.5.0
-bs4
-ConfigArgParse==0.11.0
-dill
-exchangelib
-exitstatus==1.2.0
-google_api_python_client==1.6.2
-httplib2==0.10.3
-jsonpath_ng
-kitchen==1.2.4
-lxml
-npyscreen==4.10.5
-paramiko
-phpserialize==1.3
-piexif==1.0.12
-Pillow==4.0.0
-pycrypto
-PyMySQL==0.7.10
-pyxero
-PyYAML==3.12
-requests
-simplejson==3.10.0
-sshtunnel==0.1.2
-tabulate==0.7.7
+Unidecode==1.0.22
+httplib2==0.11.3
+dill==0.2.8.2
+six==1.11.0
+jsonpath_ng.egg==info
 unicodecsv==0.14.1
-wordpress-api
-unidecode
+exchangelib==1.11.4
+bleach==1.5.0
+kitchen==1.2.4
+simplejson==3.10.0
+npyscreen==4.10.5
+Wordpress_API.egg==info
+phpserialize==1.3
+exitstatus==1.2.0
+PyMySQL==0.7.10
+future==0.16.0
+ConfigArgParse==0.11.0
+sshtunnel==0.1.2
+requests==2.19.1
+pytz==2018.5
+tabulate==0.7.7
+piexif==1.0.12
+pudb==2017.1.2
+tzlocal==1.5.1
+paramiko==2.1.1
+Pillow==5.3.0
+google_api_python_client==1.7.4
+jsonpath_ng==1.4.3
+wordpress==0.0.1
+PyYAML==3.13
