--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ tzlocal==1.5.1
 paramiko==2.1.1
 Pillow==5.3.0
 google-api-python-client==1.7.4
+oauth2client
 jsonpath_ng==1.4.3
 wordpress-api
 PyYAML==3.13
