--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ PyMySQL==0.7.10
 future==0.16.0
 ConfigArgParse==0.11.0
 sshtunnel==0.1.2
-requests==2.19.1
+requests>=2.20
 pytz==2018.5
 tabulate==0.7.7
 piexif==1.0.12
