--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,9 @@
 [aliases]
 test=pytest
 [tool:pytest]
-addopts = --run-slow
+addopts =
+    --run-slow
+    --run-local
 ; addopts = --verbose
 ; addopts = --pylama
 ; addopts = -n4
