--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
     # - "3.6"
 install:
     # copy docker testing environment from wp-api-python
-    - curl -L https://raw.githubusercontent.com/derwentx/wp-api-python/master/docker-compose.yml
+    - curl -OL https://raw.githubusercontent.com/derwentx/wp-api-python/master/docker-compose.yml
     - docker-compose up -d
     - pip install -r requirements.txt
     - pip install coverage pytest
